[package]
name = "ya-net-p2p"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]

[dependencies]
ya-net-kad = { version = "0.1", path = "kad" }
ya-client-model = { version = "0.1", git = "https://github.com/golemfactory/ya-client.git", rev = "baf7d33ad728b485dba555f65f517c433ffa435a" }
actix = "0.9"
tokio-bytes = { version = "0.5", package = "bytes" }
tokio = { version = "0.2", features=["time"]}
futures="0.3"
sha2 = "0.8.1"
serde = "1.0"
hashbrown = "0.7"
generic-array = "0.13.2"
serde_cbor = "0.11.1"
thiserror = "1.0"
log = "0.4"
ethsign = "0.7.3"
crossbeam-channel = "0.3.9"
hex = "0.4.2"

[dependencies.laminar]
git = "https://github.com/mfranciszkiewicz/laminar"
branch = "feature/ack-frags"

[workspace]
members = ['kad']
