[package]
name = "ya-net-p2p"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]

[dependencies]
ya-net-kad = { version = "0.1", path = "kad" }
ya-client-model = { version = "0.1", git = "https://github.com/golemfactory/ya-client.git", rev = "baf7d33ad728b485dba555f65f517c433ffa435a" }
actix = "0.9"
tokio-bytes = { version = "0.5", package = "bytes" }
tokio = { version = "0.2", features=["time"]}
futures="0.3"
sha2 = "0.8.1"
serde = "1.0"
hashbrown = "0.7"
generic-array = "0.13.2"
serde_cbor = "0.11.1"
thiserror = "1.0"
log = "0.4"
ethsign = "0.7.3"
crossbeam-channel = "0.3.9"
hex = "0.4.2"

[dependencies.laminar]
git = "https://github.com/mfranciszkiewicz/laminar"
branch = "feature/ack-frags"

[dev-dependencies]
rand="0.7.3"
structopt = "0.3"
url="2.1.1"
anyhow="1.0"
actix-rt = "1.0"
ya-service-bus = "0.2"
ya-sb-router = "0.1"
env_logger = "0.7.1"

[workspace]
members = ['kad']

[patch.crates-io]
ya-sb-util = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
ya-sb-proto = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
ya-service-bus = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
ya-sb-router = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }