[package]
name = "ya-net-p2p"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = ["service-bus"]
service-bus = ["ya-sb-router", "ya-service-bus"]

[dependencies]
ya-sb-router = { version = "0.1", optional = true }
ya-service-bus = { version = "0.2", optional = true }
ya-net-kad = { version = "0.1", path = "kad" }

actix = "0.9"
crossbeam-channel = "0.3.9"
ethsign = "0.7.3"
futures="0.3"
generic-array = "0.13.2"
hashbrown = "0.7"
hex = "0.4.2"
log = "0.4"
serde = "1.0"
serde_cbor = "0.11.1"
sha2 = "0.8.1"
thiserror = "1.0"
tokio = { version = "0.2", features=["time"] }
tokio-bytes = { version = "0.5", package = "bytes" }

[dependencies.laminar]
git = "https://github.com/mfranciszkiewicz/laminar"
branch = "feature/ack-frags"

[dev-dependencies]
ya-client-model = { version = "0.1", git = "https://github.com/golemfactory/ya-client.git", rev = "baf7d33ad728b485dba555f65f517c433ffa435a" }

actix-rt = "1.0"
anyhow="1.0"
env_logger = "0.7.1"
rand="0.7.3"
structopt = "0.3"
url="2.1.1"
actix-web = "2.0"
actix-files="0.2"

[[example]]
name="test_net_mk2"
required-features = ["service-bus"]

[workspace]
members = ['kad']

[patch.crates-io]
ya-sb-util = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
ya-sb-proto = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
ya-service-bus = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
ya-sb-router = { git = "https://github.com/golemfactory/yagna.git", rev = "4019c639db62d99d261120faa9dde7ff9415dd57" }
